# Football

./: .gitattributes  .gitignore  CMakeLists.txt
src/app/io/: IFileAppender.h  IFileWriter.h  TextFileAppender.cpp  TextFileAppender.h  TextFileWriter.cpp  TextFileWriter.h
src/app/sim/: IActionSelector.h  IClock.h  ITurnEffect.h  RandomActionSelector.cpp  RandomActionSelector.h  StaminaDrainSimulator.cpp  StaminaDrainSimulator.h  StdClock.cpp  StdClock.h
src/app/sim/effects/: MovementEffect.cpp  MovementEffect.h
src/app/stats/: ColumnCostFormatter.cpp  ColumnCostFormatter.h  ICostFieldFormatter.h  IStatsFormatter.h  PlainTextStatsFormatter.cpp  PlainTextStatsFormatter.h  SaveTeamStatsService.cpp  SaveTeamStatsService.h  TeamStatsCollector.cpp  TeamStatsCollector.h
src/cli/: main.cpp
src/core/players/: APilkarz.cpp  APilkarz.h  Goalkeeper.h  IZagranie.h  Napastnik.h  Obronca.h  Podanie.h  Pomocnik.h  Strzal.h  TemplateZagranie.cpp  TemplateZagranie.h  Wslizg.h
src/core/random/: DefaultRandomRange.cpp  DefaultRandomRange.h  IRandomRange.h  StaminaCostRandom.cpp  StaminaCostRandom.h
src/core/team/: ICompositionPolicy.h  IPlayerFactory.h  PlayerFactory.cpp  PlayerFactory.h  PositionsPlan.h  RandomCompositionPolicy.cpp  RandomCompositionPolicy.h  Team.cpp  Team.h  TeamBuilder.cpp  TeamBuilder.h
tests/unit/: RandomCompositionPolicyTest.cpp  TeamBuilderTest.cpp  TemplateZagranieTest.cpp
